retrieveUnpackaged/objects/tesy__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF(ISPICKVAL( Country__c , &apos;india&apos;) , 
                    
       IMAGE(&apos;/servlet/servlet.FileDownload?file=01590000002Xxhf&apos;, &apos;Image not available&apos;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nod__c</fullName>
        <formula>TODAY () - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nod</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <externalId>true</externalId>
        <label>Place</label>
        <length>62</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>state__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Karimanagar</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Vizag</fullName>
                </value>
                <value>
                    <fullName>Thirupathi</fullName>
                </value>
                <value>
                    <fullName>Warangal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>country22__c</fullName>
        <formula>IF(   TEXT( Country__c  )  =&apos;India&apos; ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>country</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isBlank__c</fullName>
        <formula>ISBLANK(tes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBlank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNull__c</fullName>
        <formula>ISNULL(tes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isNull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Andhrapradesh</fullName>
                </value>
                <value>
                    <fullName>Tamilnadu</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Goa</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tes__c</fullName>
        <externalId>true</externalId>
        <label>tes</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testf__c</fullName>
        <formula>Price__c  + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testf</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>tesy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>city Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>tesys</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test2</fullName>
        <active>true</active>
        <label>Test2</label>
    </recordTypes>
    <recordTypes>
        <fullName>test3</fullName>
        <active>true</active>
        <label>test3</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Price_Rule</fullName>
        <active>true</active>
        <description>Or((ISBLANK(Price__c)),Price__c&lt;300)</description>
        <errorConditionFormula>and (( Price__c &gt; 30),Id = null)</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price Value can&apos;t more than 300 Please check once..</errorMessage>
    </validationRules>
</CustomObject>